# bv2-77

./: pyproject.toml
ice-cream-dataops-77/: pyproject.toml
ice-cream-dataops-77/.github/workflows/: deploy.yaml
ice-cream-dataops-77/ice-cream-dataops/: config.prod.yaml  config.test.yaml
ice-cream-dataops-77/ice-cream-dataops/modules/bootcamp/ice_cream_api/data_models/: ice_cream_data_model.space.yaml
ice-cream-dataops-77/ice-cream-dataops/modules/bootcamp/ice_cream_api/transformations/: clean_assets.sql  clean_assets.yaml  create_CogniteAsset_hierarchy.sql  create_CogniteTimeSeries.sql
ice-cream-dataops-77/ice-cream-dataops/modules/bootcamp/use_cases/oee/auth/: data_pipeline_oee.yaml
ice-cream-dataops-77/ice-cream-dataops/modules/bootcamp/use_cases/oee/data_models/: oee_timeseries.space.yaml
