[tool.poetry]
name = "bv2-77"
version = "0.1.0"
description = ""
authors = ["Maria Fonseca <maria.fonseca@cognite.com>"]
readme = "README.md"
packages = [{include = "bv2_77"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
